Util build fix.

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -2,19 +2,21 @@ include ../config.mk
 
 .PHONY : all install clean
 
+CFLAGS:=${CFLAGS} -I../library
+
 all : vxi11_cmd vxi11_send
 
 vxi11_cmd: vxi11_cmd.o ../library/libvxi11.so.0
-	$(CXX) -o $@ $^ $(LDFLAGS)
+	$(CC) -o $@ $^ $(LDFLAGS)
 
-vxi11_cmd.o: vxi11_cmd.cc vxi11_user.cc vxi11.h
-	$(CXX) $(CFLAGS) -c $< -o $@
+vxi11_cmd.o: vxi11_cmd.c ../library/vxi11_user.c ../library/vxi11.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 vxi11_send: vxi11_send.o ../library/libvxi11.so.0
-	$(CXX) -o $@ $^ $(LDFLAGS)
+	$(CC) -o $@ $^ $(LDFLAGS)
 
-vxi11_send.o: vxi11_send.cc vxi11_user.cc vxi11.h
-	$(CXX) $(CFLAGS) -c $< -o $@
+vxi11_send.o: vxi11_send.c ../library/vxi11_user.c ../library/vxi11.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
 	rm -f *.o vxi11_cmd vxi11_send
