Fix SOVERSION in utils/Makefile.

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -6,13 +6,13 @@ CFLAGS:=${CFLAGS} -I../library
 
 all : vxi11_cmd vxi11_send
 
-vxi11_cmd: vxi11_cmd.o ../library/libvxi11.so.0
+vxi11_cmd: vxi11_cmd.o ../library/libvxi11.so.${SOVERSION}
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 vxi11_cmd.o: vxi11_cmd.c ../library/vxi11_user.c ../library/vxi11.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
-vxi11_send: vxi11_send.o ../library/libvxi11.so.0
+vxi11_send: vxi11_send.o ../library/libvxi11.so.${SOVERSION}
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 vxi11_send.o: vxi11_send.c ../library/vxi11_user.c ../library/vxi11.h
