Modify Makefiles to allow static library build

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -3,19 +3,14 @@ include ../config.mk
 .PHONY : all install clean
 
 CFLAGS:=${CFLAGS} -I../library
+LDFLAGS:=${LDFLAGS} -L../library -lvxi11
 
 all : vxi11_cmd vxi11_send
 
-vxi11_cmd: vxi11_cmd.o ../library/libvxi11.so.${SOVERSION}
+vxi11_cmd vxi11_send: %: %.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
-vxi11_cmd.o: vxi11_cmd.c ../library/vxi11_user.c ../library/vxi11.h
-	$(CC) $(CFLAGS) -c $< -o $@
-
-vxi11_send: vxi11_send.o ../library/libvxi11.so.${SOVERSION}
-	$(CC) -o $@ $^ $(LDFLAGS)
-
-vxi11_send.o: vxi11_send.c ../library/vxi11_user.c ../library/vxi11.h
+%.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
