--- a/utils/Makefile
+++ b/utils/Makefile
@@ -4,7 +4,10 @@ include ../config.mk
 
 CFLAGS:=${CFLAGS} -I../library
 
-all : vxi11_cmd vxi11_send
+all : vxi11_cmd vxi11_send vxi11_scdp
+
+vxi11_scdp: vxi11_scdp.o ../library/libvxi11.so.0
+	$(CC) -o $@ $^ $(LDFLAGS)
 
 vxi11_cmd: vxi11_cmd.o ../library/libvxi11.so.${SOVERSION}
 	$(CC) -o $@ $^ $(LDFLAGS)
